--- a/FinalProject/FinalProject/Base.lproj/Main.storyboard
+++ b/FinalProject/FinalProject/Base.lproj/Main.storyboard
@@ -239,7 +239,7 @@
                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="decimalPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nvS-S0-7gJ"/>
+                                                            <action selector="numberPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sgr-US-K9I"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
